<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_linear_layout"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Name :"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords"
            android:layout_gravity="center"
            android:paddingLeft="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_linear_layout"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Age :"
            android:layout_weight="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="Age"
            android:inputType="number"
            android:paddingLeft="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="Any Medical History :"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/disease_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/disease_1" />

            <CheckBox
                android:id="@+id/disease_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/disease_2" />

            <CheckBox
                android:id="@+id/disease_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/disease_3" />

            <CheckBox
                android:id="@+id/disease_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/disease_4" />

            <CheckBox
                android:id="@+id/disease_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/disease_5" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="Sex :"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/sex_group">

            <RadioButton
                android:id="@+id/sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="M" />

            <RadioButton
                android:id="@+id/sex_female"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/sex_other"
                android:text="Other"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_linear_layout"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Contact no :"
            android:layout_weight="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="Contact No"
            android:inputType="number"
            android:paddingLeft="24dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:layout_height="wrap_content"
            android:text="Smoking History :"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How long have you been smoking?"
            android:layout_marginTop="5dp"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/years_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Years"
                android:inputType="number"
                />
            <EditText
                android:id="@+id/months_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Months"
                android:inputType="number"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How many times do you smoke in a day"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/often_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="eg:4"
            android:inputType="number"
            android:paddingLeft="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Average cost of each ciggerate"/>
        <EditText
            android:id="@+id/cost_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="in Rupees"
            android:inputType="number"
            android:paddingLeft="24dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Any Interests :"
            android:layout_gravity="top"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/interest_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests_1"
                android:checked="false"
                />
            <CheckBox
                android:id="@+id/interest_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/interests_2"
                android:checked="false"
                />
            <CheckBox
                android:id="@+id/interest_3"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests_3"
                android:checked="false"
                />
            <CheckBox
                android:id="@+id/interest_4"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests_4"
                
                android:checked="false"
                />
            <CheckBox
                android:id="@+id/interest_5"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests_5"
                android:checked="false"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="Marital_Status"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/m_status_group">

            <RadioButton
                android:id="@+id/m_married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Married" />

            <RadioButton
                android:id="@+id/m_unmarried"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unmarried" />
            <RadioButton
                android:id="@+id/m_soon"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="Soon to be married" />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:layout_height="wrap_content"
            android:text="Future Plans :"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/default_margin"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/future_array"
            android:layout_marginBottom="@dimen/default_margin"
            android:drawSelectorOnTop="true"
            android:hint = "@string/future_prompt"
            android:id="@+id/future_spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Business:"
            android:layout_weight="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/business_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/business"

            android:paddingLeft="24dp"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Avg. Monthly. Salary:"
            android:layout_weight="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/salary_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:hint="@string/rupees"
            android:paddingLeft="24dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="151dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginLeft="220dp"
        android:clickable="true"
        android:text="Save" />
</LinearLayout>
</ScrollView>
</LinearLayout>